--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Urus data kesihatan dan kecergasan pada peranti anda dan kawal apl yang boleh mengakses data tersebut"</string>
     <string name="data_title" msgid="4456619761533380816">"Data dan akses"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Semak imbas rekod kesihatan"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Semua kategori"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Lihat semua kategori"</string>
     <string name="no_data" msgid="1906986019249068659">"Tiada data"</string>
@@ -401,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Akses apl"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Anda tidak mempunyai apa-apa apl serasi terpasang pada masa ini"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Akses tambahan"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Kebenaran tambahan bagi apl ini dialih keluar"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Kebenaran"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Kecergasan dan kesejahteraan"</string>
@@ -601,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Aliran ringan"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Aliran sederhana"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Aliran banyak"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Haid hari ke-<xliff:g id="DAY">%1$d</xliff:g> daripada <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Positif"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatif"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Tinggi"</string>
@@ -1070,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Edit sumber apl"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Lalai peranti"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data apl"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Data daripada apl dengan akses kepada Health Connect akan dipaparkan di sini"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Hari"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Minggu"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Bulan"</string>
@@ -1116,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Padamkan entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> secara kekal?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Padamkan entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> secara kekal?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Padamkan entri <xliff:g id="APP_NAME">%s</xliff:g> ini secara kekal?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
