--- a/apk/res/values-sw/strings.xml
+++ b/apk/res/values-sw/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Dhibiti data ya afya na siha kwenye kifaa chako na udhibiti programu zinazoweza kuifikia"</string>
     <string name="data_title" msgid="4456619761533380816">"Data na ufikiaji"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Vinjari rekodi za afya"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Aina zote"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Angalia aina zote"</string>
     <string name="no_data" msgid="1906986019249068659">"Hakuna data"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Ukitoa idhini ya kusoma, programu hii inaweza kusoma data mpya na ya siku 30 zilizopita"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Ukitoa idhini ya kusoma, programu hii inaweza kusoma data mpya na ya awali"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Ungependa kuruhusu programu ya <xliff:g id="APP_NAME">%1$s</xliff:g> kufikia Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Unaweza kujifunza jinsi <xliff:g id="APP_NAME">%1$s</xliff:g> inavyoshughulikia data yako kwenye <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"sera ya faragha"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Ungependa kuruhusu <xliff:g id="APP_NAME">%1$s</xliff:g> ifikie rekodi zako za afya?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Ukiipa ruhusa, programu inaweza kusoma na kuandika data kama vile mizio, matokeo ya maabara, chanjo na mengineyo\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Kuhusu rekodi za afya"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data ya kutuma"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Ukiruhusu, <xliff:g id="APP_NAME">%1$s</xliff:g> inaweza kutuma rekodi zako za afya kwenye Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sawazisha rekodi zako za afya kwenye programu na vyanzo vyako mbalimbali ili uziweke katika sehemu moja"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Ungependa kuondoa ruhusa zote?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Ondoa zote"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> haitaweza tena kusoma au kuandika data yoyote kutoka Health Connect.\n\nHali hii haitaathiri ruhusa zingine ambazo huenda programu hii inazo, kama vile kamera, maikrofoni, au mahali."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Ufikiaji wa programu"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Kwa sasa hujasakinisha programu zozote zinazooana"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Ufikiaji wa ziada"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Ruhusa za ziada za programu hii zimeondolewa"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Ruhusa"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Siha na afya"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Mtiririko mdogo wa damu"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Mtiririko kiasi wa damu"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Mtiririko mkubwa wa damu"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Siku ya <xliff:g id="DAY">%1$d</xliff:g> kati ya siku <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> za hedhi"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Yai limepevuka"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Yai halijapevuka"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Juu"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Badilisha vyanzo vya programu"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Hali chaguomsingi ya kifaa"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data ya programu"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Data kutoka kwa programu zinazofikia Health Connect itaonekana hapa"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Siku"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Wiki"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mwezi"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ungependa kufuta kabisa data uliyochagua ya <xliff:g id="APP_NAME">%1$s</xliff:g> ya wiki ya <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ungependa kufuta kabisa data uliyochagua ya <xliff:g id="APP_NAME">%1$s</xliff:g> ya <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ungependa kufuta kabisa data hii ya <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
