--- a/apk/res/values-af/strings.xml
+++ b/apk/res/values-af/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Bestuur die gesondheid- en fiksheiddata op jou toestel, en beheer watter apps toegang daartoe het"</string>
     <string name="data_title" msgid="4456619761533380816">"Data en toegang"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Blaai deur gesondheidrekords"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Alle kategorieë"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Sien alle kategorieë"</string>
     <string name="no_data" msgid="1906986019249068659">"Geen data nie"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"As jy leestoegang gee, kan die app nuwe data en data van die afgelope 30 dae lees"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"As jy leestoegang gee, kan die app nuwe en vorige data lees"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Gee <xliff:g id="APP_NAME">%1$s</xliff:g> toegang tot Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Jy kan meer inligting kry oor hoe <xliff:g id="APP_NAME">%1$s</xliff:g> jou data hanteer in hul <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"privaatheidsbeleid"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Laat <xliff:g id="APP_NAME">%1$s</xliff:g> toe om toegang tot jou gesondheidrekords te kry?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"As jy toegang gee, kan die app data soos allergieë, laboratoriumresultate, entstowwe en meer lees en skryf\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Meer oor gesondheidrekords"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data om te deel"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"As jy dit toelaat, kan <xliff:g id="APP_NAME">%1$s</xliff:g> jou gesondheidrekords met Health Connect deel."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sinkroniseer jou gesondheidrekords vanaf jou verskillende apps en bronne om dit op een plek te hou"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Verwyder alle toestemmings?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Verwyder almal"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> sal nie meer enige data van Health Connect af kan lees of skryf nie.\n\nDit raak nie ander toestemmings wat hierdie app dalk het nie, soos kamera, mikrofoon of ligging."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Apptoegang"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Jy het tans geen versoenbare apps geïnstalleer nie"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Bykomende toegang"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Het bykomende toestemmings vir hierdie app verwyder"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Toestemmings"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fiksheid en welstand"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Ligte vloei"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Middelmatige vloei"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Sterk vloei"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Menstruasiedag <xliff:g id="DAY">%1$d</xliff:g> van <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Positief"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatief"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Hoog"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Wysig appbronne"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Toestelverstek"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Appdata"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Data vanaf apps met toegang tot Health Connect sal hier gewys word"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Dag"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Week"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Maand"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Vee geselekteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-inskrywings vir die week van <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> permanent uit?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Vee geselekteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-inskrywings vir <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> permanent uit?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Vee hierdie <xliff:g id="APP_NAME">%s</xliff:g>-inskrywing permanent uit?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
