--- a/apk/res/values-am/strings.xml
+++ b/apk/res/values-am/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"በመሣሪያዎ ላይ ያለውን የጤና እና አካል ብቃት ውሂብ ያስተዳድሩ እና የትኛዎቹ መተግበሪያዎች ሊደርሱበት እንደሚችሉ ይቆጣጠሩ"</string>
     <string name="data_title" msgid="4456619761533380816">"ውሂብ እና መዳረሻ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"የጤና መዝገቦችን አስስ"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"ሁሉም ምድቦች"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ሁሉንም ምድቦች አሳይ"</string>
     <string name="no_data" msgid="1906986019249068659">"ውሂብ የለም"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"የንባብ መዳረሻ ከሰጡ መተግበሪያው አዲስ ውሂብን እና የያለፉት 30 ቀናት ውሂብን ማንበብ ይችላል"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"የንባብ መዳረሻ ከሰጡ መተግበሪያው አዲስ እና ያለፈ ውሂብን ማንበብ ይችላል"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connectን እንዲደርስ ይፈቀድለት?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> እንዴት ውሂብዎን እንደሚይዝ በእነሱ <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> ውስጥ ማወቅ ይችላሉ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"የግላዊነት መመሪያ"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> የጤና መዝገቦችዎን እንዲደርስ ይፍቀዱ?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"እርስዎ መዳረሻ ከሰጡ መተግበሪያው እንደ አለርጂዎች፣ የቤተ ሙከራ ውጤቶች፣ ክትባቶች እና ሌሎች ያሉትን ማንበብ እና መጻፍ ይችላል\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"ስለ የጤና መዝገቦች"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"የሚያጋሩት ውሂብ"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"ከፈቀዱ <xliff:g id="APP_NAME">%1$s</xliff:g> የእርስዎን የጤና መዝገቦች ከጤና አገናኝ ጋር ማጋራት ይችላል።"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"የጤና መዝገቦችዎን በአንድ ቦታ ለማቆየት ከእርስዎ የተለያዩ መተግበሪያዎች እና ምንጮች ያስምሩ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ሁሉም ፈቃዶች ይወገዱ?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"ሁሉንም አስወግድ"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> ከእንግዲህ ከጤና አገናኝ የመጣ ማንኛውንም ውሂብ ማንበብ ወይም መጻፍ አይችልም።\n\nይህ መተግበሪያ እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ያሉ ሊኖሩ በሚችሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አያሳርፍም።"</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"የመተግበሪያ መዳረሻ"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"በአሁኑ ጊዜ ምንም የተጫኑ ተኳዃኝ መተግበሪያዎች የሉዎትም"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ተጨማሪ መዳረሻ"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ለዚህ መተግበሪያ ተጨማሪ ፈቃዶች ተወግደዋል"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ፈቃዶች"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ብቃት እና ጤንነት"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"ቀላል ፍሰት"</string>
     <string name="flow_medium" msgid="3783688724668943154">"መካከለኛ ፍሰት"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ከባድ ፍሰት"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"የወር አበባ ቀን <xliff:g id="DAY">%1$d</xliff:g> ከ<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"አዎንታዊ"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"አሉታዊ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ከፍተኛ"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"የመተግበሪያ ምንጮችን ያርትዑ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"የመሣሪያ ነባሪ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"የመተግበሪያ ውሂብ"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"ወደ የጤና አገናኝ መዳረሻ ካላቸው መተግበሪያዎች ያለ ውሂብ እዚህ ይታያል"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"ቀን"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ሳምንት"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ወር"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"በ<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>ኛው ሳምንት የተመረጡት የ<xliff:g id="APP_NAME">%1$s</xliff:g> ግቤቶች በቋሚነት ይሰረዙ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"በ<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> የተመረጡት የ<xliff:g id="APP_NAME">%1$s</xliff:g> ግቤቶች በቋሚነት ይሰረዙ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ይህ <xliff:g id="APP_NAME">%s</xliff:g> ግቤት በቋሚነት ይሰረዝ?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
