--- a/apk/res/values-cs/strings.xml
+++ b/apk/res/values-cs/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Spravujte údaje o zdraví a kondici na zařízení a určete, které aplikace k nim mají přístup"</string>
     <string name="data_title" msgid="4456619761533380816">"Data a přístup"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Procházet zdravotní záznamy"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Zobrazte si zdravotní záznamy a aplikace, které k nim mají přístup"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Všechny kategorie"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Zobrazit všechny kategorie"</string>
     <string name="no_data" msgid="1906986019249068659">"Žádná data"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Pokud aplikaci udělíte přístup pro čtení, bude moct číst nová data a data z posledních 30 dnů"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Pokud aplikaci udělíte přístup pro čtení, bude moct číst nová i dřívější data"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Povolit aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g> přístup ke službě Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Informace o tom, jak aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> nakládá s vašimi daty, najdete v jejím dokumentu <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"zásadách ochrany soukromí"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Povolit aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g> přístup k vašim zdravotním záznamům?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Pokud aplikaci udělíte přístup, bude moci číst a zapisovat data, jako jsou alergie, laboratorní výsledky, vakcíny a podobně\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informace o zdravotních záznamech"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data ke sdílení"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Pokud to povolíte, může aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> sdílet vaše zdravotní záznamy se službou Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Synchronizujte své zdravotní záznamy z různých aplikací a zdrojů, abyste je měli na jednom místě"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Odebrat všechna oprávnění?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Odstranit vše"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> už nebude moct číst ani zapisovat žádná data ze služby Health Connect.\n\nTato akce nemá vliv na ostatní oprávnění, která aplikace má, jako je přístup k fotoaparátu, mikrofonu nebo poloze."</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Přístup aplikace"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Momentálně nemáte nainstalované žádné kompatibilní aplikace"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Další přístup"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"Dřívější data, data na pozadí"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Této aplikaci byla odebrána další oprávnění"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Oprávnění"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness a wellness"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Mírné krvácení"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Střední krvácení"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Silné krvácení"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"Neznámý výtok"</string>
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="DAY">%1$d</xliff:g>. den periody z <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Perioda (1 den)}few{Perioda (# dny)}many{Perioda (# dne)}other{Perioda (# dní)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitivní"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativní"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Vysoká"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Upravit zdroje aplikací"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Výchozí nastavení zařízení"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data aplikace"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Tady se budou zobrazovat data z aplikací s přístupem na platformu Health Connect"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Den"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Týden"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Měsíc"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Trvale smazat vybrané záznamy aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> za období <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Trvale smazat vybrané záznamy aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> za období <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Trvale smazat tento záznam aplikace <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
