--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Du kannst die Gesundheits- und Fitnessdaten auf deinem Gerät verwalten und entscheiden, welche Apps darauf zugreifen können"</string>
     <string name="data_title" msgid="4456619761533380816">"Daten und Zugriff"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Gesundheitsdaten ansehen"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Alle Kategorien"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Alle Kategorien ansehen"</string>
     <string name="no_data" msgid="1906986019249068659">"Keine Daten"</string>
@@ -408,6 +410,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"App-Zugriff"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Derzeit sind keine kompatiblen Apps installiert"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Zusätzliche Zugriffsrechte"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Zusätzliche Berechtigungen für diese App entfernt"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Berechtigungen"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness und Wohlbefinden"</string>
@@ -608,7 +612,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Leichte Blutung"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Mittlere Blutung"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Starke Blutung"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Tag <xliff:g id="DAY">%1$d</xliff:g> von <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> der Periode"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Positiv"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Hoch"</string>
@@ -1077,7 +1085,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"App-Quellen bearbeiten"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Standard-App bei diesem Gerät"</string>
     <string name="app_data_title" msgid="6499967982291000837">"App-Daten"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Daten aus Apps mit Zugriff auf Health Connect werden hier angezeigt"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Tag"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Woche"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Monat"</string>
@@ -1123,4 +1134,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ausgewählte „<xliff:g id="APP_NAME">%1$s</xliff:g>“-Einträge für die Woche vom <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> endgültig löschen?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ausgewählte „<xliff:g id="APP_NAME">%1$s</xliff:g>“-Einträge für <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> endgültig löschen?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Diesen „<xliff:g id="APP_NAME">%s</xliff:g>“-Eintrag endgültig löschen?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
