--- a/apk/res/values-es-rUS/strings.xml
+++ b/apk/res/values-es-rUS/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Administra los datos de salud y actividad física en tu dispositivo, y controla las apps que pueden acceder a ellos"</string>
     <string name="data_title" msgid="4456619761533380816">"Datos y acceso"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Explorar registros de salud"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Consulta los registros de salud y las apps que pueden acceder a ellos"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Todas las categorías"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Ver todas las categorías"</string>
     <string name="no_data" msgid="1906986019249068659">"Sin datos"</string>
@@ -408,6 +409,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Acceso de la app"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Actualmente, no tienes ninguna app compatible instalada"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acceso adicional"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"Datos anteriores, datos en segundo plano"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Se quitaron los permisos adicionales para esta app"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Permisos"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Actividad física y bienestar"</string>
@@ -608,7 +610,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Flujo leve"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Flujo moderado"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Flujo abundante"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"Flujo desconocido"</string>
     <string name="period_day" msgid="3821944462093965882">"Día <xliff:g id="DAY">%1$d</xliff:g> de <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> del período"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Período (1 día)}other{Período (# días)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positiva"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativa"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Alta"</string>
@@ -1077,7 +1081,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Editar fuentes de app"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Opción predeterminada del dispositivo"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Datos de app"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Aquí se mostrará la información de apps con acceso a Health Connect"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Día"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Semana"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mes"</string>
@@ -1123,4 +1130,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"¿Quieres borrar de forma permanente las entradas seleccionadas de <xliff:g id="APP_NAME">%1$s</xliff:g> de la semana del <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"¿Quieres borrar de forma permanente las entradas seleccionadas de <xliff:g id="APP_NAME">%1$s</xliff:g> del <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"¿Quieres borrar de forma permanente esta entrada de <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
