--- a/apk/res/values-in/strings.xml
+++ b/apk/res/values-in/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Kelola data kesehatan dan kebugaran di perangkat, dan kontrol aplikasi yang dapat mengaksesnya"</string>
     <string name="data_title" msgid="4456619761533380816">"Data dan akses"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Cari catatan kesehatan"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Semua kategori"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Lihat semua kategori"</string>
     <string name="no_data" msgid="1906986019249068659">"Tidak ada data"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Jika Anda memberikan akses baca, aplikasi dapat membaca data baru dan data dari 30 hari terakhir"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Jika Anda memberikan akses baca, aplikasi dapat membaca data baru dan data lama"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Izinkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Anda dapat mempelajari cara <xliff:g id="APP_NAME">%1$s</xliff:g> menangani data Anda di <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>-nya"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"kebijakan privasi"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Izinkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses catatan kesehatan Anda?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Jika Anda memberikan akses, aplikasi dapat membaca dan menulis data seperti alergi, hasil lab, vaksin, dan lainnya\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tentang catatan kesehatan"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data yang akan dibagikan"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Jika Anda mengizinkan, <xliff:g id="APP_NAME">%1$s</xliff:g> dapat membagikan catatan kesehatan Anda ke Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sinkronkan catatan kesehatan Anda dari berbagai aplikasi dan sumber untuk menyimpannya di satu tempat"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Hapus semua izin?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Hapus semua"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> tidak dapat lagi membaca atau menulis data dari Health Connect.\n\nHal ini tidak memengaruhi izin lain yang mungkin dimiliki aplikasi ini, seperti kamera, mikrofon, atau lokasi."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Akses aplikasi"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Anda saat ini tidak memiliki aplikasi terinstal yang kompatibel"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Akses tambahan"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Menghapus izin tambahan untuk aplikasi ini"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Izin"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Kebugaran dan kesehatan"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Ringan"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Sedang"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Deras"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Menstruasi hari <xliff:g id="DAY">%1$d</xliff:g> dari <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Positif"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatif"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Tinggi"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Edit sumber aplikasi"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Default perangkat"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data aplikasi"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Data dari aplikasi yang memiliki akses ke Health Connect akan muncul di sini"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Hari"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Minggu"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Bulan"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Hapus permanen entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Hapus permanen entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk bulan <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Hapus permanen entri <xliff:g id="APP_NAME">%s</xliff:g> ini?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
