--- a/apk/res/values-ka/strings.xml
+++ b/apk/res/values-ka/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ჯანმრთელობასა და ფიტნესთან დაკავშირებული მონაცემების მართვა თქვენს მოწყობილობაში და იმის განსაზღვრა, თუ რომელ აპს ჰქონდეს მათზე წვდომა"</string>
     <string name="data_title" msgid="4456619761533380816">"მონაცემები და წვდომა"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"ჯანმრთელობის ჩანაწერების დათვალიერება"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"იხილეთ თქვენი ჯანმრთელობის ჩანაწერები და რომელ აპებს აქვთ მათზე წვდომა"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"ყველა კატეგორია"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ყველა კატეგორიის ნახვა"</string>
     <string name="no_data" msgid="1906986019249068659">"მონაცემები არ არის"</string>
@@ -401,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"აპზე წვდომა"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"თქვენ ამჟამად არ გაქვთ დაინსტალირებული თავსებადი აპები"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"დამატებითი წვდომა"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"ძველი მონაცემები, ფონის მონაცემები"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"წაიშალა დამატებითი ნებართვები ამ აპისთვის"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ნებართვები"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ფიტნესი და კეთილდღეობა"</string>
@@ -601,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"მსუბუქი სისხლდენა"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ზომიერი სისხლდენა"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ძლიერი სისხლდენა"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"უცნობი სისხლდენა"</string>
     <string name="period_day" msgid="3821944462093965882">"პერიოდის დღე: <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{პერიოდი (1 დღე)}other{პერიოდი (# დღე)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"დადებითი"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"უარყოფითი"</string>
     <string name="ovulation_high" msgid="205362931427158291">"მაღალი"</string>
@@ -1070,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"აპების წყაროების რედაქტირება"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"მოწყობილობის ნაგულისხმევი"</string>
     <string name="app_data_title" msgid="6499967982291000837">"აპის მონაცემები"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"მონაცემები იმ აპებიდან, რომლებსაც Health Connect-ზე აქვს წვდომა, აქ გამოჩნდება"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"დღე"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"კვირა"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"თვე"</string>
@@ -1116,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"გსურთ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-ის კვირისთვის <xliff:g id="APP_NAME">%1$s</xliff:g>-ის არჩეული შენატანების სამუდამოდ წაშლა?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"გსურთ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-ისთვის <xliff:g id="APP_NAME">%1$s</xliff:g>-ის არჩეული შენატანების სამუდამოდ წაშლა?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"გსურთ ამ <xliff:g id="APP_NAME">%s</xliff:g>-ის შენატანის სამუდამოდ წაშლა?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
