--- a/apk/res/values-kk/strings.xml
+++ b/apk/res/values-kk/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Құрылғыңыздағы денсаулық және фитнес деректерін реттеп, оларды пайдалана алатын қолданбаларды таңдаңыз."</string>
     <string name="data_title" msgid="4456619761533380816">"Деректер және пайдалану рұқсаты"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Денсаулық туралы ақпаратты шолу"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Барлық санат"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Барлық санатты көру"</string>
     <string name="no_data" msgid="1906986019249068659">"Ешқандай дерек жоқ."</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Оқуға рұқсат берсеңіз, қолданба жаңа деректер мен соңғы 30 күндегі деректерді оқи алады."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Оқуға рұқсат берсеңіз, қолданба жаңа және бұрынғы деректерді оқи алады."</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасына Health Connect-ті пайдалануға рұқсат берілсін бе?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасының деректеріңізді қалай өңдейтіні туралы <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> құжатынан біле аласыз."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"құпиялық саясаты"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасына денсаулық туралы ақпаратыңызды пайдалануға рұқсат берілсін бе?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Рұқсат берсеңіз, қолданба аллергиялар, зертханалық талдау нәтижелері, вакциналар сияқты деректерді оқып, жаза алады.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Денсаулық туралы ақпарат"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Бөлісетін деректер"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Рұқсат берсеңіз, <xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасы денсаулық туралы ақпаратыңызды Health Connect қолданбасына жібере алады."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Әр қолданбадағы және дереккөздегі денсаулық туралы ақпаратты синхрондап, бір жерде сақтаңыз."</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Барлық рұқсатты өшіру керек пе?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Барлығын өшіру"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасы бұдан былай Health Connect-тегі деректерді оқи алмайды немесе жаза алмайды.\n\nБұл жағдай локацияны, камераны немесе микрофонды пайдалану сияқты осы қолданбадағы басқа рұқсаттарға әсер етпейді."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Қолданба рұқсаты"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Орнатылған үйлесімді қолданбалар жоқ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Қосымша пайдалану рұқсаты"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Бұл қолданбаның қосымша рұқсаттары өшірілді."</string>
     <string name="permissions_header" msgid="6519976063360071569">"Рұқсаттар"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фитнес пен денсаулық"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Аз мөлшердегі бөлініс"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Орташа мөлшердегі бөлініс"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Көп мөлшердегі бөлініс"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Етеккір: <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> күн"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Оң"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Теріс"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Жоғары"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Қолданба дереккөздерін өзгерту"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Құрылғының әдепкі қолданбасы"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Қолданба деректері"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connect-ке кіру рұқсаты бар қолданбалардан алынған дерек осы жерде көрсетіледі."</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Күн"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Апта"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Ай"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Белгілі бір апта (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>) бойынша таңдалған <xliff:g id="APP_NAME">%1$s</xliff:g> жазбалары біржола жойылсын ба?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Белгілі бір ай (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>) бойынша таңдалған <xliff:g id="APP_NAME">%1$s</xliff:g> жазбалары біржола жойылсын ба?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Бұл <xliff:g id="APP_NAME">%s</xliff:g> жазбасы біржола жойылсын ба?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
