--- a/apk/res/values-lv/strings.xml
+++ b/apk/res/values-lv/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Pārvaldiet ierīcē saglabātos veselības un fitnesa datus un kontrolējiet, kuras lietotnes tiem var piekļūt."</string>
     <string name="data_title" msgid="4456619761533380816">"Dati un piekļuve"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Pārlūkot veselības datus"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Visas kategorijas"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Skatīt visas kategorijas"</string>
     <string name="no_data" msgid="1906986019249068659">"Nav datu"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Ja piešķirsiet lasīšanas piekļuvi, šī lietotne varēs lasīt jaunus datus, kā arī datus, kas pievienoti pēdējo 30 dienu laikā."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Ja piešķirsiet lasīšanas piekļuvi, šī lietotne varēs lasīt gan jaunos, gan iepriekšējos datus."</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Vai atļaut lietotnei <xliff:g id="APP_NAME">%1$s</xliff:g> piekļūt platformai Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Lai uzzinātu, kā lietotnē <xliff:g id="APP_NAME">%1$s</xliff:g> tiek apstrādāti jūsu dati, skatiet: <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"konfidencialitātes politiku"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Vai atļaut lietotnei <xliff:g id="APP_NAME">%1$s</xliff:g> piekļūt jūsu veselības datiem?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Ja piešķirsiet piekļuvi, lietotne varēs lasīt un rakstīt datus, piemēram, par alerģijām, laboratorijas rezultātiem un vakcināciju.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Par veselības datiem"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Kopīgojami dati"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Ja atļausiet, <xliff:g id="APP_NAME">%1$s</xliff:g> varēs kopīgot jūsu veselības datus ar platformu Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sinhronizējiet veselības datus no dažādām lietotnēm un avotiem, lai glabātu tos vienuviet"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Vai noņemt visas atļaujas?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Noņemt visu"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"Lietotne <xliff:g id="APP_NAME">%1$s</xliff:g> vairs nevarēs lasīt un rakstīt no platformas Health Connect iegūtos datus.\n\nTādējādi netiek ietekmētas citas atļaujas, kas lietotnei var būt piešķirtas, piemēram, kameras, mikrofona vai atrašanās vietas atļaujas."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Lietotnes piekļuve"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Pašlaik nav instalēta neviena saderīga lietotne"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Papildu piekļuve"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Šai lietotnei ir noņemtas papildu atļaujas."</string>
     <string name="permissions_header" msgid="6519976063360071569">"Atļaujas"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness un labsajūta"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Viegla asiņošana"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Vidēja asiņošana"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Spēcīga asiņošana"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Menstruālā cikla <xliff:g id="DAY">%1$d</xliff:g>. diena no <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitīvs"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatīvs"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Augsts līmenis"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Rediģēt lietotņu avotus"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Ierīces noklusējuma lietotne"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Lietotnes dati"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Šeit būs redzami dati no lietotnēm, kurām ir piekļuve platformai Health Connect."</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Diena"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Nedēļa"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mēnesis"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Vai neatgriezeniski dzēst atlasītos lietotnes <xliff:g id="APP_NAME">%1$s</xliff:g>ierakstus par šo nedēļu: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Vai neatgriezeniski dzēst atlasītos lietotnes <xliff:g id="APP_NAME">%1$s</xliff:g> ierakstus par šo mēnesi: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Vai neatgriezeniski dzēst šo lietotnes <xliff:g id="APP_NAME">%s</xliff:g> ierakstu?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
