--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Управувајте со податоците за здравје и фитнес на вашиот уред и контролирајте кои апликации може да пристапуваат до нив"</string>
     <string name="data_title" msgid="4456619761533380816">"Податоци и пристап"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Прелистувајте здравствена евиденција"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Сите категории"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Преглед на сите категории"</string>
     <string name="no_data" msgid="1906986019249068659">"Нема податоци"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Ако ѝ дадете пристап за читање, апликацијата ќе може да ги чита новите податоци и податоците од минатите 30 дена"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Ако ѝ дадете пристап за читање, апликацијата ќе може да ги чита новите и минатите податоци"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Да се дозволи <xliff:g id="APP_NAME">%1$s</xliff:g> да пристапува до Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Може да дознаете како <xliff:g id="APP_NAME">%1$s</xliff:g> постапува со вашите податоци во <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"политика за приватност"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Да се дозволи <xliff:g id="APP_NAME">%1$s</xliff:g> да пристапува до вашата здравствена евиденција?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Ако доделите пристап, апликацијата ќе може да чита и пишува податоци како што се алергии, лабораториски резултати, вакцини и друго \n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"За здравствената евиденција"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Податоци за споделување"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Ако дозволите, <xliff:g id="APP_NAME">%1$s</xliff:g> ќе може да ја споделува вашата здравствена евиденција со Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизирајте ја вашата здравствена евиденција од различни апликации и извори за да ја чувате на едно место"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Да се отстранат сите дозволи?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Отстрани ги сите"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> веќе нема да може да чита, ниту да запишува податоци од Health Connect.\n\nОва не влијае на другите дозволи што може да ги има апликацијава, на пр. за пристап до камерата, микрофонот или локацијата."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Пристап на апликацијата"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Во моментов немате инсталирано компатибилни апликации"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Дополнителен пристап"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Отстранети се дополнителните дозволи за апликацијава"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Дозволи"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фитнес и благосостојба"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Слаб проток"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Среден проток"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Силен проток"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Менструација: ден <xliff:g id="DAY">%1$d</xliff:g> од <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Позитивна"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Негативна"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Голема"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Изменување на изворите на апликации"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандардни поставки за уредот"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Податоци од апликација"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Податоците од апликациите со пристап до Health Connect ќе се прикажат тука"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Ден"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Седмица"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Месец"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Да се избришат трајно избраните записи од <xliff:g id="APP_NAME">%1$s</xliff:g> за целата седмица од <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Да се избришат трајно избраните записи од <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Да се избришe трајно записов во <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
