--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Төхөөрөмж дээрээ эрүүл мэнд, фитнесийн өгөгдлийг удирдаж, үүнд ямар апп хандаж болохыг хянана уу"</string>
     <string name="data_title" msgid="4456619761533380816">"Өгөгдөл, хандалт"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Эрүүл мэндийн түүхийг үзэх"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Бүх ангилал"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Бүх ангиллыг харах"</string>
     <string name="no_data" msgid="1906986019249068659">"Өгөгдөл байхгүй байна"</string>
@@ -283,7 +285,7 @@
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Эрүүл мэндийн бүх түүхийг бичих"</string>
     <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"Харшил"</string>
     <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"харшил"</string>
-    <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"Харшлын талаар унших"</string>
+    <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"Харшлын өгөгдлийг унших"</string>
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Эрүүл мэндийн байдал"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"эрүүл мэндийн байдал"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Эрүүл мэндийн байдлыг унших"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Хэрэв та унших эрх өгвөл апп шинэ өгөгдөл болон сүүлийн 30 хоногийн өгөгдлийг унших боломжтой"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Хэрэв та унших эрх өгвөл апп шинэ болон өмнөх өгөгдлийг унших боломжтой"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g>-г Health Connect-д хандахыг зөвшөөрөх үү?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Та <xliff:g id="APP_NAME">%1$s</xliff:g> таны өгөгдлийг хэрхэн зохицуулдаг болохыг тухайн аппын <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>-с мэдэж авах боломжтой"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"нууцлалын бодлого"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д таны эрүүл мэндийн түүхэд хандахыг зөвшөөрөх үү?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Хэрэв та хандах эрх өгвөл тухайн апп харшил, лабораторийн хариу, вакцин болон бусад өгөгдлийг унших, бичих боломжтой\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Эрүүл мэндийн түүхийн тухай"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Хуваалцах өгөгдөл"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Хэрэв та зөвшөөрвөл <xliff:g id="APP_NAME">%1$s</xliff:g> таны эрүүл мэндийн түүхийг Health Connect-тай хуваалцах боломжтой."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Өөр өөр апп болон эх сурвалжийн эрүүл мэндийн түүхээ нэг дор байлгахын тулд синк хийнэ үү"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Бүх зөвшөөрлийг хасах уу?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Бүгдийг хасах"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-н аливаа өгөгдлийг унших эсвэл бичих боломжгүй болно.\n\nЭнэ нь байршил, камер эсвэл микрофон зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
@@ -356,11 +351,11 @@
     <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"Фитнес болон эрүүл оршихуйн бүх зөвшөөрлийг хасах уу?"</string>
     <string name="disconnect_all_fitness_permissions_dialog_checkbox" msgid="8808559689899914478">"Мөн Health Connect-с <xliff:g id="APP_NAME">%1$s</xliff:g>-н фитнесийн өгөгдлийг устгах"</string>
     <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"Эрүүл мэндийн түүхийн бүх зөвшөөрлийг хасах уу?"</string>
-    <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"Мөн Health Connect-с <xliff:g id="APP_NAME">%1$s</xliff:g>-н фитнесийн эрүүл мэндийн түүхийг устгах"</string>
-    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших эсвэл бичих боломжгүй болно.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
-    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших эсвэл бичих боломжгүй болох бөгөөд үүнд арын өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
-    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших эсвэл бичих боломжгүй болох бөгөөд үүнд хуучин өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
-    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших эсвэл бичих боломжгүй болох бөгөөд үүнд арын болон хуучин өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
+    <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"Мөн Health Connect-с <xliff:g id="APP_NAME">%1$s</xliff:g>-н эрүүл мэндийн түүхийг устгах"</string>
+    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших, бичих боломжгүй болно.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
+    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших, бичих боломжгүй болох бөгөөд үүнд арын өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
+    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших, бичих боломжгүй болох бөгөөд үүнд хуучин өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
+    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-с энэ өгөгдлийг унших, бичих боломжгүй болох бөгөөд үүнд арын болон хуучин өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
     <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"Бүх зөвшөөрлийг хасах уу?"</string>
     <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-н өгөгдлийг унших эсвэл бичих боломжгүй болно.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
     <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> цаашид Health Connect-н өгөгдлийг унших эсвэл бичих боломжгүй болох бөгөөд үүнд арын өгөгдөл багтана.\n\nЭнэ нь камер, микрофон, байршил зэрэг уг аппад байж болох бусад зөвшөөрөлд нөлөөлөхгүй."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Аппын хандалт"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Та одоогоор ямар ч тохирох апп суулгаагүй байна"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Нэмэлт хандах эрх"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Энэ аппын нэмэлт зөвшөөрлүүдийг хассан"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Зөвшөөрөл"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фитнес, эрүүл мэнд"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Сарын тэмдэг бага ирэх"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Сарын тэмдэг дунд зэрэг ирэх"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Сарын тэмдэг хэт их ирэх"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Сарын тэмдгийн <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>-с <xliff:g id="DAY">%1$d</xliff:g> дахь өдөр"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Эерэг"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Сөрөг"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Өндөр"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Аппын эх сурвалжуудыг засах"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Төхөөрөмжийн өгөгдмөл"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Aппын өгөгдөл"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connect-д хандах эрхтэй аппуудын өгөгдлийг энд харуулна"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Өдөр"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Долоо хоног"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Сар"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="APP_NAME">%1$s</xliff:g>-н <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-н долоо хоногийн сонгогдсон оруулгуудыг бүрмөсөн устгах уу?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="APP_NAME">%1$s</xliff:g>-н <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-н сонгогдсон оруулгуудыг бүрмөсөн устгах уу?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g>-н энэ оруулгыг бүрмөсөн устгах уу?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
