--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ଆପଣଙ୍କ ଡିଭାଇସରେ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟାକୁ ପରିଚାଳନା କରନ୍ତୁ ଓ କେଉଁ ଆପ୍ସ ଏହାକୁ ଆକ୍ସେସ କରିପାରିବ ତାହା ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="data_title" msgid="4456619761533380816">"ଡାଟା ଏବଂ ଆକ୍ସେସ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ବ୍ରାଉଜ କରନ୍ତୁ"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"ସମସ୍ତ ବର୍ଗ"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ସମସ୍ତ ବର୍ଗ ଦେଖନ୍ତୁ"</string>
     <string name="no_data" msgid="1906986019249068659">"କୌଣସି ଡାଟା ନାହିଁ"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"ଯଦି ଆପଣ ପଢ଼ିବା ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆପ ନୂଆ ଡାଟା ଏବଂ ଗତ 30 ଦିନର ଡାଟାକୁ ପଢ଼ିପାରିବ"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"ଯଦି ଆପଣ ପଢ଼ିବା ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆପ ନୂଆ ଏବଂ ଅତୀତର ଡାଟାକୁ ପଢ଼ିପାରିବ"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Health Connectକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> ତା\'ର <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>ରେ ଆପଣଙ୍କ ଡାଟାକୁ କିପରି ପରିଚାଳନା କରେ ତାହା ଆପଣ ଜାଣିପାରିବେ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"ଗୋପନୀୟତା ନୀତି"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦିଅନ୍ତୁ?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"ଯଦି ଆପଣ ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆଲର୍ଜି, ଲେବ ଫଳାଫଳ, ଟୀକା ଏବଂ ଆହୁରି ଅନେକ କିଛି ପରି ଡାଟାକୁ ଆପ ପଢ଼ି ଲେଖିପାରିବ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ବିଷୟରେ"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ସେୟାର କରିବା ପାଇଁ ଡାଟା"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"ଯଦି ଆପଣ ଅନୁମତି ଦିଅନ୍ତି, ତେବେ <xliff:g id="APP_NAME">%1$s</xliff:g> ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡକୁ Health Connect ସହ ସେୟାର କରିପାରେ।"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"ଆପଣଙ୍କର ବିଭିନ୍ନ ଆପ୍ସ ଏବଂ ସୋର୍ସରୁ ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକୁ ଗୋଟିଏ ସ୍ଥାନରେ ରଖିବା ପାଇଁ ସିଙ୍କ କରନ୍ତୁ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ସବୁ ଅନୁମତିକୁ କାଢ଼ି ଦେବେ?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"ସବୁ କାଢ଼ି ଦିଅନ୍ତୁ"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g>, Health Connectରୁ କୌଣସି ଡାଟାକୁ ଆଉ ପଢ଼ିବା କିମ୍ବା ଲେଖିବା ପାଇଁ ସକ୍ଷମ ହେବ ନାହିଁ।\n\nଏହି ଆପର କେମେରା, ମାଇକ୍ରୋଫୋନ କିମ୍ବା ଲୋକେସନ ପରି ରହିଥିବା ଅନ୍ୟ ଅନୁମତିଗୁଡ଼ିକୁ ଏହା ପ୍ରଭାବିତ କରେ ନାହିଁ।"</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"ଆପ ଆକ୍ସେସ"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"ବର୍ତ୍ତମାନ ଆପଣଙ୍କର କୌଣସି କମ୍ପାଟିବଲ ଆପ୍ସ ଇନଷ୍ଟଲ କରାଯାଇନାହିଁ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ଅତିରିକ୍ତ ଆକ୍ସେସ"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ଏହି ଆପ ପାଇଁ ଅତିରିକ୍ତ ଅନୁମତିକୁ କାଢ଼ି ଦିଆଯାଇଛି"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ଅନୁମତି"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"ସାମାନ୍ୟ ରକ୍ତସ୍ରାବ"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ମଧ୍ୟମ ରକ୍ତସ୍ରାବ"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ଅତ୍ୟଧିକ ରକ୍ତସ୍ରାବ"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>ରୁ ଋତୁସ୍ରାବ ଅବଧିର ଦିନ <xliff:g id="DAY">%1$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"ପଜିଟିଭ"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"ନେଗେଟିଭ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ଅଧିକ"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ଆପ ସୋର୍ସଗୁଡ଼ିକୁ ଏଡିଟ କରନ୍ତୁ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ଡିଭାଇସ୍ ଡିଫଲ୍ଟ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ଆପ ଡାଟା"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connectକୁ ଆକ୍ସେସ ଥିବା ଆପ୍ସରୁ ଡାଟା ଏଠାରେ ଦେଖାଯିବ"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"ଦିନ"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ସପ୍ତାହ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ମାସ"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>ର ସପ୍ତାହ ପାଇଁ ଚୟନିତ <xliff:g id="APP_NAME">%1$s</xliff:g> ଏଣ୍ଟ୍ରିଗୁଡ଼ିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ପାଇଁ ଚୟନିତ <xliff:g id="APP_NAME">%1$s</xliff:g> ଏଣ୍ଟ୍ରିଗୁଡ଼ିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ଏହି <xliff:g id="APP_NAME">%s</xliff:g> ଏଣ୍ଟ୍ରିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
