--- a/apk/res/values-pa/strings.xml
+++ b/apk/res/values-pa/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ਆਪਣੇ ਡੀਵਾਈਸ \'ਤੇ ਸਿਹਤ ਅਤੇ ਫਿੱਟਨੈੱਸ ਸੰਬੰਧੀ ਡਾਟੇ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ ਅਤੇ ਕੰਟਰੋਲ ਕਰੋ ਕਿ ਕਿਹੜੀਆਂ ਐਪਾਂ ਇਸ ਤੱਕ ਪਹੁੰਚ ਕਰ ਸਕਦੀਆਂ ਹਨ"</string>
     <string name="data_title" msgid="4456619761533380816">"ਡਾਟਾ ਅਤੇ ਪਹੁੰਚ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"ਸਿਹਤ ਰਿਕਾਰਡਾਂ ਨੂੰ ਬ੍ਰਾਊਜ਼ ਕਰੋ"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"ਆਪਣੇ ਸਿਹਤ ਰਿਕਾਰਡ ਦੇਖੋ ਅਤੇ ਨਾਲ ਹੀ ਇਹ ਵੀ ਦੇਖੋ ਕਿ ਉਨ੍ਹਾਂ ਤੱਕ ਕਿਹੜੀਆਂ ਐਪਾਂ ਪਹੁੰਚ ਕਰ ਸਕਦੀਆਂ ਹਨ"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"ਸਾਰੀਆਂ ਸ਼੍ਰੇਣੀਆਂ"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ਸਾਰੀਆਂ ਸ਼੍ਰੇਣੀਆਂ ਦੇਖੋ"</string>
     <string name="no_data" msgid="1906986019249068659">"ਕੋਈ ਡਾਟਾ ਨਹੀਂ"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"ਜੇ ਤੁਸੀਂ ਪੜ੍ਹਨ ਦੀ ਪਹੁੰਚ ਕਰਨ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਐਪ ਨਵੇਂ ਡਾਟੇ ਅਤੇ ਪਿਛਲੇ 30 ਦਿਨਾਂ ਦੇ ਡਾਟੇ ਨੂੰ ਪੜ੍ਹ ਸਕਦੀ ਹੈ"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"ਜੇ ਤੁਸੀਂ ਪੜ੍ਹਨ ਦੀ ਪਹੁੰਚ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਐਪ ਨਵੇਂ ਅਤੇ ਪੁਰਾਣੇ ਡਾਟੇ ਨੂੰ ਪੜ੍ਹ ਸਕਦੀ ਹੈ"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"ਕੀ <xliff:g id="APP_NAME">%1$s</xliff:g> ਨੂੰ Health Connect ਤੱਕ ਪਹੁੰਚ ਕਰਨ ਦੇਣੀ ਹੈ?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"ਤੁਸੀਂ ਜਾਣ ਸਕਦੇ ਹੋ ਕਿ <xliff:g id="APP_NAME">%1$s</xliff:g> ਉਨ੍ਹਾਂ ਦੀ <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> ਮੁਤਾਬਕ ਤੁਹਾਡੇ ਡਾਟੇ ਨੂੰ ਕਿਵੇਂ ਸੰਭਾਲਦੀ ਹੈ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"ਪਰਦੇਦਾਰੀ ਨੀਤੀ"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"ਕੀ <xliff:g id="APP_NAME">%1$s</xliff:g> ਨੂੰ ਤੁਹਾਡੇ ਸਿਹਤ ਰਿਕਾਰਡਾਂ ਤੱਕ ਪਹੁੰਚ ਕਰਨ ਦੀ ਆਗਿਆ ਦੇਣੀ ਹੈ?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"ਜੇ ਤੁਸੀਂ ਪਹੁੰਚ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਐਪ ਅਲਰਜੀਆਂ, ਲੈਬ ਨਤੀਜਿਆਂ, ਟੀਕਿਆਂ ਅਤੇ ਹੋਰ ਜਾਣਕਾਰੀ ਵਰਗੇ ਡਾਟੇ ਨੂੰ ਪੜ੍ਹ ਅਤੇ ਲਿਖ ਸਕਦੀ ਹੈ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"ਸਿਹਤ ਰਿਕਾਰਡਾਂ ਬਾਰੇ"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ਸਾਂਝਾ ਕਰਨ ਲਈ ਡਾਟਾ"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"ਜੇ ਤੁਸੀਂ ਆਗਿਆ ਦਿੰਦੇ ਹੋ, ਤਾਂ <xliff:g id="APP_NAME">%1$s</xliff:g> ਐਪ Health Connect ਨਾਲ ਤੁਹਾਡੇ ਸਿਹਤ ਰਿਕਾਰਡਾਂ ਨੂੰ ਸਾਂਝਾ ਕਰ ਸਕਦੀ ਹੈ।"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"ਵੱਖ-ਵੱਖ ਐਪਾਂ ਅਤੇ ਸਰੋਤਾਂ ਤੋਂ ਆਪਣੇ ਸਿਹਤ ਰਿਕਾਰਡਾਂ ਨੂੰ ਸਿੰਕ ਕਰੋ, ਤਾਂ ਸਾਰੇ ਡਾਟੇ ਨੂੰ ਇੱਕੋ ਥਾਂ \'ਤੇ ਬਰਕਰਾਰ ਰੱਖਿਆ ਜਾ ਸਕੇ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ਕੀ ਸਾਰੀਆਂ ਇਜਾਜ਼ਤਾਂ ਨੂੰ ਹਟਾਉਣਾ ਹੈ?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"ਸਭ ਹਟਾਓ"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਹੁਣ Health Connect ਤੋਂ ਕਿਸੇ ਵੀ ਡਾਟੇ ਨੂੰ ਪੜ੍ਹ ਜਾਂ ਲਿਖ ਨਹੀਂ ਸਕੇਗੀ।\n\nਇਸ ਨਾਲ ਐਪ ਦੀਆਂ ਕੈਮਰੇ, ਮਾਈਕ੍ਰੋਫ਼ੋਨ ਜਾਂ ਟਿਕਾਣੇ ਵਰਗੀਆਂ ਹੋਰ ਇਜਾਜ਼ਤਾਂ ਪ੍ਰਭਾਵਿਤ ਨਹੀਂ ਹੋਣਗੀਆਂ।"</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"ਐਪ ਤੱਕ ਪਹੁੰਚ"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"ਫ਼ਿਲਹਾਲ ਤੁਹਾਡੇ ਕੋਲ ਕੋਈ ਵੀ ਅਨੁਰੂਪ ਐਪ ਸਥਾਪਤ ਨਹੀਂ ਹੈ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ਵਧੀਕ ਪਹੁੰਚ"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"ਪਿਛਲਾ ਡਾਟਾ, ਬੈਕਗ੍ਰਾਊਂਡ ਡਾਟਾ"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ਇਸ ਐਪ ਲਈ ਵਧੀਕ ਇਜਾਜ਼ਤਾਂ ਨੂੰ ਹਟਾਇਆ ਗਿਆ"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ਇਜਾਜ਼ਤਾਂ"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ਫਿੱਟਨੈੱਸ ਅਤੇ ਤੰਦਰੁਸਤੀ"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"ਘੱਟ ਪ੍ਰਵਾਹ"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ਦਰਮਿਆਨਾ ਪ੍ਰਵਾਹ"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ਵਧੇਰੇ ਪ੍ਰਵਾਹ"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"ਮਾਹਵਾਰੀ ਸੰਬੰਧੀ ਅਗਿਆਤ ਡਾਟਾ"</string>
     <string name="period_day" msgid="3821944462093965882">"ਮਾਹਵਾਰੀ ਦੇ <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> ਦਿਨਾਂ ਵਿੱਚੋਂ <xliff:g id="DAY">%1$d</xliff:g> ਦਿਨ"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{ਮਾਹਵਾਰੀ (1 ਦਿਨ)}one{ਮਾਹਵਾਰੀ (# ਦਿਨ)}other{ਮਾਹਵਾਰੀ (# ਦਿਨ)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"ਸਕਾਰਾਤਮਕ"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"ਨਕਾਰਾਤਮਕ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ਜ਼ਿਆਦਾ"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ਐਪ ਸਰੋਤਾਂ ਦਾ ਸੰਪਾਦਨ ਕਰੋ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਡੀਵਾਈਸ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ਐਪ ਡਾਟਾ"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connect ਤੱਕ ਪਹੁੰਚ ਵਾਲੀਆਂ ਐਪਾਂ ਦਾ ਡਾਟਾ ਇੱਥੇ ਦਿਖੇਗਾ"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"ਦਿਨ"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ਹਫ਼ਤਾ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ਮਹੀਨਾ"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"ਕੀ ਚੁਣੀ ਗਈ <xliff:g id="APP_NAME">%1$s</xliff:g> ਦੇ, <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ਵਾਲੇ ਹਫ਼ਤੇ ਦੇ ਇੰਦਰਾਜ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣੇ ਹਨ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"ਕੀ ਚੁਣੀ ਗਈ <xliff:g id="APP_NAME">%1$s</xliff:g> ਦੇ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ਵਾਲੇ ਇੰਦਰਾਜ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣੇ ਹਨ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ਕੀ ਇਸ <xliff:g id="APP_NAME">%s</xliff:g> ਦਾ ਇਹ ਇੰਦਰਾਜ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣਾ ਹੈ?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
