--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Faça a gestão dos dados de saúde e fitness no seu dispositivo e defina que apps podem aceder a estes"</string>
     <string name="data_title" msgid="4456619761533380816">"Dados e acesso"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Procurar registos de saúde"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Veja os seus registos de saúde e que apps podem aceder a estes"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Todas as categorias"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Ver todas as categorias"</string>
     <string name="no_data" msgid="1906986019249068659">"Sem dados"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Se conceder acesso de leitura, a app pode ler dados novos e dados dos últimos 30 dias"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Se conceder acesso de leitura, a app pode ler dados novos e anteriores"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda à Saúde Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Pode saber como a app <xliff:g id="APP_NAME">%1$s</xliff:g> trata os seus dados na respetiva <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"política de privacidade"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda aos seus registos de saúde?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Se der acesso, a app pode ler e escrever dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Acerca dos registos de saúde"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dados a partilhar"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Se permitir, a app <xliff:g id="APP_NAME">%1$s</xliff:g> pode partilhar os seus registos de saúde com a Saúde Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sincronize os seus registos de saúde de diferentes apps e origens para os manter num único lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Remover todas as autorizações?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Remover tudo"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> vai deixar de poder ler e escrever dados da Saúde Connect.\n\nIsto não afeta outras autorizações que esta app possa ter, como Localização, Câmara ou Microfone."</string>
@@ -357,7 +351,7 @@
     <string name="disconnect_all_fitness_permissions_dialog_checkbox" msgid="8808559689899914478">"Eliminar também os dados de fitness da app <xliff:g id="APP_NAME">%1$s</xliff:g> da Saúde Connect"</string>
     <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"Remover todas as autorizações do registo de saúde?"</string>
     <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"Eliminar também os registos de saúde da app <xliff:g id="APP_NAME">%1$s</xliff:g> da Saúde Connect"</string>
-    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> vai deixar de poder ler e escrever estes dados da Saúde Connect.\n\nIsto não afeta outras autorizações que esta app possa ter, como o acesso à câmara, ao microfone ou à localização."</string>
+    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> vai deixar de poder ler ou escrever estes dados da Saúde Connect.\n\nIsto não afeta outras autorizações que esta app possa ter, como o acesso à câmara, ao microfone ou à localização."</string>
     <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> vai deixar de poder ler ou escrever estes dados da Saúde Connect, incluindo dados de segundo plano.\n\nIsto não afeta outras autorizações que esta app possa ter, como o acesso à câmara, ao microfone ou à localização."</string>
     <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> vai deixar de poder ler ou escrever estes dados da Saúde Connect, incluindo dados antigos.\n\nIsto não afeta outras autorizações que esta app possa ter, como o acesso à câmara, ao microfone ou à localização."</string>
     <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> vai deixar de poder ler ou escrever estes dados da Saúde Connect, incluindo dados antigos e de segundo plano.\n\nIsto não afeta outras autorizações que esta app possa ter, como o acesso à câmara, ao microfone ou à localização."</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Acesso de apps"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Atualmente, não tem nenhuma app compatível instalada"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acesso adicional"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"Dados anteriores, dados de segundo plano"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Autorizações adicionais removidas para esta app"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Autorizações"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness e bem-estar"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Fluxo ligeiro"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Fluxo médio"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Fluxo intenso"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"Fluxo desconhecido"</string>
     <string name="period_day" msgid="3821944462093965882">"Dia <xliff:g id="DAY">%1$d</xliff:g> de <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> do período"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Período (1 dia)}other{Período (# dias)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positiva"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativa"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Elevada"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Editar origens de apps"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Predefinição do dispositivo"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dados de apps"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Os dados de apps com acesso à Saúde Connect são apresentados aqui"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Dia"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Semana"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mês"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Eliminar permanentemente as entradas da app <xliff:g id="APP_NAME">%1$s</xliff:g> selecionadas da semana de <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Eliminar permanentemente as entradas da app <xliff:g id="APP_NAME">%1$s</xliff:g> selecionadas de <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Eliminar permanentemente esta entrada da app <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
