--- a/apk/res/values-ro/strings.xml
+++ b/apk/res/values-ro/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Gestionează datele despre sănătate și fitness de pe dispozitiv și alege aplicațiile care le pot accesa"</string>
     <string name="data_title" msgid="4456619761533380816">"Date și acces"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Răsfoiește datele medicale"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Toate categoriile"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Vezi toate categoriile"</string>
     <string name="no_data" msgid="1906986019249068659">"Fără date"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Dacă acorzi acces pentru citire, aplicația poate să citească date noi și date din ultimele 30 de zile"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Dacă acorzi acces pentru citire, aplicația poate să citească date noi și anterioare"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Permiți accesul <xliff:g id="APP_NAME">%1$s</xliff:g> la Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Află cum îți gestionează <xliff:g id="APP_NAME">%1$s</xliff:g> datele din <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"politica de confidențialitate"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Permiți ca <xliff:g id="APP_NAME">%1$s</xliff:g> să-ți acceseze datele medicale?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Dacă acorzi acces, aplicația poate să citească și să scrie date precum alergii, rezultate de laborator, vaccinuri și altele\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Despre datele medicale"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Date de trimis"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Dacă permiți, <xliff:g id="APP_NAME">%1$s</xliff:g> poate să-ți trimită datele medicale la Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sincronizează-ți datele medicale din diferite aplicații și surse pentru a le păstra într-un singur loc"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Elimini toate permisiunile?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Elimină-le pe toate"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> nu va mai putea să citească sau să scrie date din Health Connect.\n\nAcest lucru nu afectează celelalte permisiuni pe care le poate avea aplicația, cum ar fi cele pentru locație, camera foto sau microfon."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Accesul la aplicații"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Momentan, nu ai aplicații compatibile instalate"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acces suplimentar"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"S-au eliminat permisiunile suplimentare pentru această aplicație"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Permisiuni"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness și wellness"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Menstruație redusă"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Menstruație medie"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Menstruație abundentă"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Ziua menstruației <xliff:g id="DAY">%1$d</xliff:g> din <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitiv"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Fertilitate ridicată"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Editează sursele de aplicații"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Prestabilită pentru dispozitiv"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Datele aplicației"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Datele din aplicațiile cu acces la Health Connect se vor afișa aici"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Zi"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Săptămână"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Lună"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ștergi definitiv <xliff:g id="APP_NAME">%1$s</xliff:g> intrări selectate pentru săptămâna <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ștergi definitiv <xliff:g id="APP_NAME">%1$s</xliff:g> intrări selectate pentru <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ștergi definitiv intrarea din <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
