--- a/apk/res/values-sl/strings.xml
+++ b/apk/res/values-sl/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Upravljajte podatke o zdravju in telesni pripravljenosti v napravi ter nadzirajte, katere aplikacije lahko dostopajo do njih"</string>
     <string name="data_title" msgid="4456619761533380816">"Podatki in dostop"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Prebrskajte zdravstvene evidence"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Ogled zdravstvenih evidenc in seznama aplikacij, ki lahko dostopajo do njih"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Vse kategorije"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Pokaži vse kategorije"</string>
     <string name="no_data" msgid="1906986019249068659">"Ni podatkov"</string>
@@ -401,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Dostop aplikacije"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Trenutno nimate nameščene nobene združljive aplikacije."</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Dodatni dostop"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"Pretekli podatki, podatki v ozadju"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Dodatna dovoljenja za to aplikacijo so odstranjena"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Dovoljenja"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Telesna pripravljenost in dobro počutje"</string>
@@ -601,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Šibka krvavitev"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Srednja krvavitev"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Močna krvavitev"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"Neznan tok"</string>
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="DAY">%1$d</xliff:g>. dan menstruacije od <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Menstruacija (1 dan)}one{Menstruacija (# dan)}two{Menstruacija (# dneva)}few{Menstruacija (# dni)}other{Menstruacija (# dni)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitivno"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativno"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Visoko"</string>
@@ -1070,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Urejanje virov aplikacij"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Privzeta aplikacija v napravi"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Podatki aplikacije"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Podatki iz aplikacij z dostopom do aplikacije Health Connect bodo prikazani tukaj"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Dan"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Teden"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mesec"</string>
@@ -1116,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ali želite trajno izbrisati izbrane vnose aplikacije <xliff:g id="APP_NAME">%1$s</xliff:g> za teden od dne <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ali želite trajno izbrisati izbrane vnose aplikacije <xliff:g id="APP_NAME">%1$s</xliff:g> za mesec <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ali želite trajno izbrisati ta vnos aplikacije <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
