--- a/apk/res/values-sr/strings.xml
+++ b/apk/res/values-sr/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Управљајте подацима о здрављу и фитнесу на уређају и контролишите које апликације могу да им приступају"</string>
     <string name="data_title" msgid="4456619761533380816">"Подаци и приступ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Прегледај здравствену евиденцију"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Погледајте здравствену евиденцију и које апликације могу да јој приступају"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Све категорије"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Прикажи све категорије"</string>
     <string name="no_data" msgid="1906986019249068659">"Нема података"</string>
@@ -298,10 +299,10 @@
     <string name="medications_content_description" msgid="6165382876281780190">"Читање података о лековима"</string>
     <string name="personal_details_uppercase_label" msgid="7241635933310394120">"Лични подаци"</string>
     <string name="personal_details_lowercase_label" msgid="1907848447611775151">"лични подаци"</string>
-    <string name="personal_details_content_description" msgid="3191211304673909831">"Читање личних података"</string>
-    <string name="practitioner_details_uppercase_label" msgid="2940667649808082510">"Детаљи о лекару"</string>
-    <string name="practitioner_details_lowercase_label" msgid="8195591077717971542">"детаљи о лекару"</string>
-    <string name="practitioner_details_content_description" msgid="8775396516928504185">"Читање детаља о лекару"</string>
+    <string name="personal_details_content_description" msgid="3191211304673909831">"да читате личне податке"</string>
+    <string name="practitioner_details_uppercase_label" msgid="2940667649808082510">"Детаљи о лекарима и стручњацима"</string>
+    <string name="practitioner_details_lowercase_label" msgid="8195591077717971542">"детаљи о лекарима и стручњацима"</string>
+    <string name="practitioner_details_content_description" msgid="8775396516928504185">"да читате детаље о лекарима и стручњацима"</string>
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Трудноћа"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"трудноћа"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"Читање података о трудноћи"</string>
@@ -313,7 +314,7 @@
     <string name="social_history_content_description" msgid="7187059309389849831">"Читање података о друштвеним одредницама здравља"</string>
     <string name="visits_uppercase_label" msgid="8532619758336375886">"Посете"</string>
     <string name="visits_lowercase_label" msgid="2545887061364564151">"посете"</string>
-    <string name="visits_content_description" msgid="6336796415049565697">"Читање података о посетама"</string>
+    <string name="visits_content_description" msgid="6336796415049565697">"да читате податке о посетама"</string>
     <string name="vital_signs_uppercase_label" msgid="289862347143374640">"Витални знаци"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"витални знаци"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"Читање виталних знака"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Ако дате приступ за читање, апликација може да чита нове податке и податке из претходних 30 дана"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Ако дате приступ за читање, ова апликација може да чита нове и раније податке"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Желите да дозволите апликацији <xliff:g id="APP_NAME">%1$s</xliff:g> да приступа Повезивању здравља?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Можете да сазнате како <xliff:g id="APP_NAME">%1$s</xliff:g> управља вашим подацима у: <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"политика приватности"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Желите да дозволите да <xliff:g id="APP_NAME">%1$s</xliff:g> приступа вашој здравственој евиденцији?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Ако дате приступ, апликација може да чита и уписује податке, на пример, алергије, лабораторијске резултате, вакцине и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"О здравственој евиденцији"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Подаци за дељење"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Ако дозволите, <xliff:g id="APP_NAME">%1$s</xliff:g> може да дели вашу здравствену евиденцију са Повезивањем здравља."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизујте здравствену евиденцију из различитих апликација и извора да бисте је држали на једном месту"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Желите да уклоните све дозволе?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Уклони све"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> више неће моћи да чита ни уписује било које податке из Повезивања здравља.\n\nТо не утиче на друге дозволе које ова апликација може да има, попут камере, микрофона или локације."</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Приступ апликацијама"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Тренутно немате инсталирану ниједну компатибилну апликацију"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Додатни приступ"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"Ранији подаци, позадински подаци"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Уклоњене су додатне дозволе за ову апликацију"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Дозволе"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фитнес и велнес"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Благо крварење"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Средње крварење"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Обилно крварење"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"Непозната количина крварења"</string>
     <string name="period_day" msgid="3821944462093965882">"Дан циклуса: <xliff:g id="DAY">%1$d</xliff:g>. од <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Менструација (1 дан)}one{Менструација (# дан)}few{Менструација (# дана)}other{Менструација (# дана)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Позитиван"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Негативан"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Висока плодност"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Измени изворе апликација"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Подразумевано за уређај"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Подаци апликација"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Подаци из апликација са приступом Повезивању здравља приказаће се овде"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Дан"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Недеља"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Месец"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Желите трајно да избришете изабране уносе у: <xliff:g id="APP_NAME">%1$s</xliff:g> за недељу <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Желите трајно да избришете изабране уносе у: <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Желите трајно да избришете овај унос у: <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
