--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ஆரோக்கியம் மற்றும் உடற்பயிற்சி குறித்த தரவை உங்கள் சாதனத்தில் நிர்வகிக்கலாம், அதை எந்தெந்த ஆப்ஸ் அணுகலாம் என்பதைக் கட்டுப்படுத்தலாம்"</string>
     <string name="data_title" msgid="4456619761533380816">"தரவு மற்றும் அணுகல்"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"உடல்நலம் குறித்த சுருக்கமான தகவல்களைக் காட்டு"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"உங்கள் உடல்நலம் குறித்த சுருக்கமான தகவல்களையும் அவற்றை எந்த ஆப்ஸ் அணுகலாம் என்பதையும் பார்க்கலாம்"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"அனைத்து வகைகளும்"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"அனைத்து வகைகளையும் காட்டு"</string>
     <string name="no_data" msgid="1906986019249068659">"தரவு எதுவும் இல்லை"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"வாசிப்பதற்கான அணுகலை வழங்கினால், புதிய தரவையும் கடந்த 30 நாட்களில் பெறப்பட்ட தரவையும் ஆப்ஸ் வாசிக்க முடியும்"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"வாசிப்பதற்கான அணுகலை வழங்கினால், புதிய தரவையும் முந்தைய தரவையும் ஆப்ஸ் வாசிக்க முடியும்"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Health Connectடை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்க வேண்டுமா?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸ் உங்கள் தரவை எப்படிக் கையாளுகிறது என்பதை <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> பக்கத்தில் நீங்கள் தெரிந்துகொள்ளலாம்"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"தனியுரிமைக் கொள்கை"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"உங்கள் உடல்நலம் குறித்த சுருக்கமான தகவல்களை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்கவா?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"நீங்கள் அனுமதித்தால் ஒவ்வாமை, ஆய்வக முடிவுகள், தடுப்பூசிகள் மற்றும் பல தரவை ஆப்ஸ் படிக்கலாம் எழுதலாம்\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"உடல்நலம் குறித்த சுருக்கமான தகவல்கள் பற்றிய அறிமுகம்"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"பகிர்வதற்கான தரவு"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"நீங்கள் அனுமதித்தால் உங்கள் உடல்நலம் குறித்த சுருக்கமான தகவல்களை Health Connect உடன் <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸ் பகிரலாம்."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"வெவ்வேறு ஆப்ஸ் மற்றும் மூலங்களில் இருந்து உங்கள் உடல்நலம் குறித்த சுருக்கமான தகவல்களை ஒரே இடத்தில் வைத்திருக்க அவற்றை ஒத்திசைக்கவும்"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"எல்லா அனுமதிகளையும் அகற்றவா?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"அனைத்தையும் அகற்று"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"Health Connect ஆப்ஸிலுள்ள எந்தவொரு தரவையும் <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸால் இனி திருத்தவோ பார்க்கவோ முடியாது.\n\nஇது இந்த ஆப்ஸுக்கு வழங்கப்பட்டுள்ள பிற அனுமதிகளில் (கேமரா, மைக்ரோஃபோன், இருப்பிடம் போன்றவை) எந்த மாற்றத்தையும் ஏற்படுத்தாது."</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"ஆப்ஸ் அணுகல்"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"தற்போது இணக்கமான ஆப்ஸ் எதுவும் நிறுவப்பட்டிருக்கவில்லை"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"கூடுதல் அணுகல்"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"முந்தைய தரவு, பின்புலத் தரவு"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"இந்த ஆப்ஸுக்கான கூடுதல் அனுமதிகள் அகற்றப்பட்டன"</string>
     <string name="permissions_header" msgid="6519976063360071569">"அனுமதிகள்"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"உடற்பயிற்சியும் ஆரோக்கியமும்"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"குறைந்த ரத்தப்போக்கு"</string>
     <string name="flow_medium" msgid="3783688724668943154">"மிதமான ரத்தப்போக்கு"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"அதிக ரத்தப்போக்கு"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"எதிர்பார்க்காத மாதவிடாய்"</string>
     <string name="period_day" msgid="3821944462093965882">"மாதவிடாய் காலத்தின் <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> நாட்களில் <xliff:g id="DAY">%1$d</xliff:g>வது நாள்"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{மாதவிடாய் (1 நாள்)}other{மாதவிடாய் (# நாட்கள்)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"பாசிட்டிவ்"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"நெகட்டிவ்"</string>
     <string name="ovulation_high" msgid="205362931427158291">"அதிகம்"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ஆப்ஸ் ஆதாரங்களை மாற்றுதல்"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"சாதனத்தின் இயல்புநிலை"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ஆப்ஸ் தரவு"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connectடுக்கான அணுகல் உள்ள ஆப்ஸின் தரவு இங்கே காட்டப்படும்"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"நாள்"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"வாரம்"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"மாதம்"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"தேர்ந்தெடுக்கப்பட்ட <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸின் <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> வாரத்திற்கான பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"தேர்ந்தெடுக்கப்பட்ட <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸின் <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>க்கான பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"இந்த <xliff:g id="APP_NAME">%s</xliff:g> ஆப்ஸின் பதிவை நிரந்தரமாக நீக்கவா?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
