--- a/apk/res/values-tl/strings.xml
+++ b/apk/res/values-tl/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Pamahalaan ang data ng kalusugan at fitness sa iyong device, at kontrolin kung aling mga app ang makaka-access nito"</string>
     <string name="data_title" msgid="4456619761533380816">"Data at access"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Mag-browse sa mga health record"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Tingnan ang iyong mga health record at kung aling mga app ang puwedeng maka-access sa mga ito"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Lahat ng kategorya"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Tingnan ang lahat ng kategorya"</string>
     <string name="no_data" msgid="1906986019249068659">"Walang data"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Kung magbibigay ka ng access sa pag-read, mari-read ng app ang bagong data at data mula sa nakalipas na 30 araw"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Kung magbibigay ka ng access sa pag-read, mari-read ng app ang bago at nakaraang data"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Payagan ang <xliff:g id="APP_NAME">%1$s</xliff:g> na i-access ang Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Puwede mong alamin kung paano pinapangasiwaan ng <xliff:g id="APP_NAME">%1$s</xliff:g> ang iyong data sa <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> nila"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"patakaran sa privacy"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Bigyan ang <xliff:g id="APP_NAME">%1$s</xliff:g> ng access sa iyong mga health record?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Kung magbibigay ka ng access, puwedeng mag-read at mag-write ng data ang app gaya ng mga allergy, resulta ng lab, vaccine, at higit pa\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tungkol sa mga health record"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data na ibabahagi"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Kung papayagan mo, puwedeng ibahagi ng <xliff:g id="APP_NAME">%1$s</xliff:g> ang iyong mga health record sa Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"I-sync ang iyong mga health record mula sa iba\'t ibang app at source para mapanatili ang mga ito sa iisang lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Alisin ang lahat ng pahintulot?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Alisin lahat"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"Hindi na mari-read o mara-write ng <xliff:g id="APP_NAME">%1$s</xliff:g> ang anumang data mula sa Health Connect.\n\nHindi nito maaapektuhan ang iba pang pahintulot na posibleng mayroon ang app na ito, gaya ng camera, mikropono, o lokasyon."</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Access ng app"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Wala kang anumang compatible na naka-install na app sa kasalukuyan"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Karagdagang access"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"Dating data, data sa background"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Inalis ang mga karagdagang pahintulot para sa app na ito"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Mga Pahintulot"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness at wellness"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Mahina"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Katamtaman"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Malakas"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"Hindi alam na flow"</string>
     <string name="period_day" msgid="3821944462093965882">"Araw <xliff:g id="DAY">%1$d</xliff:g> ng <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> ng buwanang-dalaw"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Period (1 araw)}one{Period (# araw)}other{Period (# na araw)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positibo"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatibo"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Mataas"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"I-edit ang mga source ng app"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Default ng device"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data ng app"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Lalabas ang data mula sa mga app na may access sa Health Connect dito"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Araw"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Linggo"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Buwan"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Permanenteng i-delete ang mga napiling entry ng <xliff:g id="APP_NAME">%1$s</xliff:g> para sa linggo ng <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Permanenteng i-delete ang mga napiling entry ng <xliff:g id="APP_NAME">%1$s</xliff:g> para sa <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Permanenteng i-delete ang entry ng <xliff:g id="APP_NAME">%s</xliff:g> na ito?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
