--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Cihazınızdaki sağlık ve fitness verilerini yönetin ve hangi uygulamaların bu verilere erişebileceğini kontrol edin"</string>
     <string name="data_title" msgid="4456619761533380816">"Veriler ve erişim"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Sağlık kayıtlarına göz at"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Tüm kategoriler"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Tüm kategorileri göster"</string>
     <string name="no_data" msgid="1906986019249068659">"Veri yok"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Veri okuma izni verirseniz uygulama yeni verileri ve son 30 gün içindeki verileri okuyabilir"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Veri okuma izni verirseniz uygulama yeni ve geçmiş verileri okuyabilir"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının Health Connect\'e erişmesine izin verilsin mi?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının verilerinizi nasıl işlediğini <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> bağlantısından öğrenebilirsiniz"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"gizlilik politikası"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının sağlık kayıtlarınıza erişmesine izin verilsin mi?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Erişim izni verirseniz uygulama; alerjiler, tahlil sonuçları, aşılar gibi verileri ve daha fazlasını okuyup yazabilir\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sağlık kayıtları hakkında"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Paylaşılacak veriler"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"İzin verirseniz <xliff:g id="APP_NAME">%1$s</xliff:g>, sağlık kayıtlarınızı Health Connect ile paylaşabilir."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Farklı uygulamalarınızdan ve kaynaklarınızdan sağlık kayıtlarınızı senkronize ederek hepsini tek bir yerde tutun"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Tüm izinler kaldırılsın mı?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Tümünü kaldır"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> artık Health Connect\'teki verileri okuyamayacak veya yazamayacak.\n\nBu durum, uygulamanın sahip olabileceği kamera, mikrofon veya konum gibi diğer izinler etkilenmez."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Uygulama erişimi"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Şu anda yüklü olan uyumlu uygulamanız yok"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Ek erişim"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Bu uygulamanın ek izinleri kaldırıldı"</string>
     <string name="permissions_header" msgid="6519976063360071569">"İzinler"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness ve sağlıklı yaşam"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Hafif kanama"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Orta düzeyde kanama"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Yoğun kanama"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Âdet günü: <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Olumlu"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Olumsuz"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Yüksek"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Uygulama kaynaklarını düzenleyin"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Cihaz varsayılanı"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Uygulama verileri"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connect\'e erişimi olan uygulamaların verileri burada görünecek"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Gün"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Hafta"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Ay"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> haftasına ait seçili <xliff:g id="APP_NAME">%1$s</xliff:g> girişleri kalıcı olarak silinsin mi?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ayına ait seçili <xliff:g id="APP_NAME">%1$s</xliff:g> girişleri kalıcı olarak silinsin mi?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> girişi kalıcı olarak silinsin mi?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
