--- a/apk/res/values-uk/strings.xml
+++ b/apk/res/values-uk/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Керуйте даними про здоров’я і фізичну активність на пристрої, а також визначайте додатки, які матимуть доступ до цих даних"</string>
     <string name="data_title" msgid="4456619761533380816">"Дані й доступ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Переглянути медичні дані"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Усі категорії"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Переглянути всі категорії"</string>
     <string name="no_data" msgid="1906986019249068659">"Немає даних"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Якщо ви дозволите доступ для перегляду, додаток зможе переглядати нові дані, а також дані за останні 30 днів"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Якщо ви дозволите доступ для перегляду, додаток зможе переглядати нові й минулі дані"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Надати додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Щоб дізнатися, як додаток <xliff:g id="APP_NAME">%1$s</xliff:g> обробляє ваші дані, перегляньте його <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"політиці конфіденційності"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Дозволити додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до ваших медичних даних?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Якщо ви надасте доступ, додаток зможе переглядати й записувати такі дані, як відомості про алергії, результати аналізів, щеплення тощо\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Про медичні дані"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Дані, які будуть передаватися"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Якщо ви надасте дозвіл, додаток <xliff:g id="APP_NAME">%1$s</xliff:g> зможе надсилати медичні дані в Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Синхронізуйте медичні дані з різних додатків і джерел, щоб централізовано зберігати їх"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Вилучити всі дозволи?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Вилучити всі"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> більше не зможе переглядати або записувати будь-які дані з Health Connect.\n\nЦе не вплине на інші дозволи, надані цьому додатку (наприклад, на доступ до камери, мікрофона чи геоданих)."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Доступ додатка"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Наразі у вас не встановлено сумісних додатків"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Додатковий доступ"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Для цього додатка видалено й інші дозволи"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Дозволи"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фізична активність і здоров’я"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Незначні виділення"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Помірні виділення"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Рясні виділення"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="DAY">%1$d</xliff:g>-й день менструації з <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Позитивний"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Негативний"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Високий результат"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Змінити додатки-джерела"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"За умовчанням для пристрою"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Дані додатка"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Тут відображатимуться дані з додатків, які мають доступ до Health Connect"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"День"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Тиждень"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Місяць"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Видалити назавжди вибрані записи додатка <xliff:g id="APP_NAME">%1$s</xliff:g> за тиждень (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>)?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Видалити назавжди вибрані записи додатка <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Видалити назавжди цей запис додатка <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
