--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -23,6 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"اپنے آلہ پر صحت اور تندرستی کے ڈیٹا کا نظم کریں اور کنٹرول کریں کہ کون سی ایپس اس تک رسائی حاصل کر سکتی ہیں"</string>
     <string name="data_title" msgid="4456619761533380816">"ڈیٹا اور رسائی"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"صحت کے ریکارڈز کو براؤز کریں"</string>
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"اپنے صحت کے ریکارڈز دیکھیں اور جانیں کہ کون سی ایپس ان تک رسائی حاصل کر سکتی ہیں"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"سبھی زمرے"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"سبھی زمروں کو دیکھیں"</string>
     <string name="no_data" msgid="1906986019249068659">"کوئی ڈیٹا نہیں ہے"</string>
@@ -331,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"اگر آپ پڑھنے کی رسائی دیتے ہیں تو ایپ نیا ڈیٹا اور گزشتہ 30 دن کا ڈیٹا پڑھ سکتی ہے"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"اگر آپ پڑھنے کی رسائی دیتے ہیں تو ایپ نئے اور گزشتہ ڈیٹا کو پڑھ سکتی ہے"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> کو Health Connect تک رسائی کی اجازت دیں؟"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"آپ اپنے <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> میں یہ جان سکتے ہیں کہ <xliff:g id="APP_NAME">%1$s</xliff:g> آپ کے ڈیٹا کو کیسے ہینڈل کرتی ہے"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"رازداری کی پالیسی"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> ایپ کو اپنے صحت کے ریکارڈز تک رسائی کی اجازت دیں؟"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"آپ کے رسائی دینے پر، ایپ الرجیز، لیب کے نتائج، ویکسینز اور مزید جیسے ڈیٹا کو پڑھ اور لکھ سکتی ہے\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"صحت کے ریکارڈز کے بارے میں"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"اشتراک کرنے کے لیے ڈیٹا"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"آپ کے اجازت دینے پر، <xliff:g id="APP_NAME">%1$s</xliff:g> ایپ آپ کے صحت کے ریکارڈز کا Health Connect کے ساتھ اشتراک کر سکتی ہے۔"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"اپنے صحت کے ریکارڈز کو اپنی مختلف ایپس اور وسائل سے مطابقت پذیر بنائیں تاکہ انہیں ایک مقام پر رکھا جا سکے"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"تمام اجازتیں ہٹائیں؟"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"سبھی ہٹائیں"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connect سے مزید کوئی ڈیٹا پڑھ یا لکھ نہیں سکے گی۔\n\nیہ دوسری اجازتیں جو اس ایپ کی ہو سکتی ہیں، جیسے کیمرا، مائیکروفون یا مقام کو متاثر نہیں کرتی ہے۔"</string>
@@ -408,6 +402,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"ایپ تک رسائی"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"آپ کے پاس فی الحال کوئی موافق ایپ انسٹال نہیں ہے"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"اضافی رسائی"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"ماضی کا ڈیٹا، پس منظر کا ڈیٹا"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"اس ایپ کے لیے اضافی اجازتیں ہٹا دی گئیں"</string>
     <string name="permissions_header" msgid="6519976063360071569">"اجازتیں"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"تندرستی اور بہبودی"</string>
@@ -608,7 +603,9 @@
     <string name="flow_light" msgid="1937543318146228793">"ماہواری کا کم مقدار میں ہونا"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ماہواری کا اوسط مقدار میں ہونا"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ماہواری کا زیادہ مقدار میں ہونا"</string>
+    <string name="flow_unknown" msgid="1634411759928572900">"نامعلوم فلو"</string>
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> میں سے حیض کا دن <xliff:g id="DAY">%1$d</xliff:g>"</string>
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{ماہواری (1 دن)}other{ماہواری (# دن)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"مثبت"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"منفی"</string>
     <string name="ovulation_high" msgid="205362931427158291">"اعلی"</string>
@@ -1077,7 +1074,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ایپ کے مآخذ میں ترمیم کریں"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"آلہ ڈیفالٹ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ایپ کا ڈیٹا"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connect تک رسائی والی ایپس کا ڈیٹا یہاں ظاہر ہوگا"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"دن"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ہفتہ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"مہینہ"</string>
@@ -1123,4 +1123,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> کے ہفتے کے لیے <xliff:g id="APP_NAME">%1$s</xliff:g> کے منتخب اندراجات کو مستقل طور پر حذف کریں؟"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> کے لیے <xliff:g id="APP_NAME">%1$s</xliff:g> کے منتخب اندراجات کو مستقل طور پر حذف کریں؟"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"مستقل طور پر اس <xliff:g id="APP_NAME">%s</xliff:g> کے اندراج کو حذف کریں؟"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
