--- a/apk/res/values-uz/strings.xml
+++ b/apk/res/values-uz/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Qurilmadagi jismoniy va salomatlik maʼlumotlarini tekshirish va boshqarish hamda buni koʻrishga qaysi ilovalarga ruxsat berilishi"</string>
     <string name="data_title" msgid="4456619761533380816">"Maʼlumotlar va ruxsat"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Salomatlik qaydlarini varaqlash"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Barcha turkumlar"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Barcha turkumlarni ochish"</string>
     <string name="no_data" msgid="1906986019249068659">"Hech narsa topilmadi"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Oʻqishga ruxsat bersangiz, ilova yangi maʼlumotlar va oxirgi 30 kunlik maʼlumotlarni oʻqiy oladi"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Oʻqishga ruxsat bersangiz, ilova yangi va eski maʼlumotlarni oʻqiy oladi"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connectga ulanishiga ruxsat berilsinmi?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> maʼlumotlaringizni qanday ishlatishi haqida <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>da yozilgan"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"maxfiylik siyosati"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> tibbiy qaydlarga kirishiga ruxsat berilsinmi?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Agar ruxsat bersangiz, ilova allergiya, laboratoriya natijalari, vaksina va boshqa maʼlumotlarni oʻqishi va yozishi mumkin.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tibbiy qaydlar haqida"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Ulashiladigan maʼlumot"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Agar ruxsat bersangiz, <xliff:g id="APP_NAME">%1$s</xliff:g> tibbiy qaydlarni Health Connectga berishi mumkin."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Bir joyda saqlash uchun turli ilova va manbalardan tibbiy qaydlaringizni sinxronlang"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Barcha ruxsatlar taqiqlansinmi?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Hammasini tozalash"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect xizmatidagi axborotlarni oʻqishi yoki yozishi imkonsiz.\n\nBu mazkur ilova oladigan joylashuv, kamera yoki mikrofon kabi boshqa ruxsatlarga taʼsir qilmaydi."</string>
@@ -358,9 +353,9 @@
     <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"Salomatlikka oid barcha ruxsatlar olib tashlansinmi?"</string>
     <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"Health Connect xizmatidan <xliff:g id="APP_NAME">%1$s</xliff:g> saqlagan tibbiy qaydlarni ham oʻchirish"</string>
     <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect xizmatidagi axborotlarni oʻqishi yoki yozishi imkonsiz.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
-    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect bu maʼlumotlarini, jumladan, fondagi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
-    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect bu maʼlumotlarini, jumladan, avvalgi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
-    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect bu maʼlumotlarini, jumladan, fondagi va avvalgi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
+    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connectdagi bu maʼlumotlarni, jumladan, fondagi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
+    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connectdagi bu maʼlumotlarni, jumladan, avvalgi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
+    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connectdagi bu maʼlumotlarni, jumladan, fondagi va avvalgi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ilovaning kamera, mikrofon yoki joylashuv kabi boshqa ruxsatlariga taʼsir qilmaydi."</string>
     <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"Barcha ruxsatlar olib tashlansinmi?"</string>
     <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect xizmatidagi axborotlarni oʻqishi yoki yozishi imkonsiz.\n\nBu mazkur ilova oladigan joylashuv, kamera yoki mikrofon kabi boshqa ruxsatlarga taʼsir qilmaydi."</string>
     <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"Endi <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Health Connect maʼlumotlarini, jumladan, fondagi maʼlumotlarni oʻqiy olmaydi yoki yoza olmaydi.\n\nBu ushbu ilova oladigan joylashuv, kamera yoki mikrofon kabi boshqa ruxsatlarga taʼsir qilmaydi."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Ilovaga ruxsat"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Mos ilovalar oʻrnatilmagan"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Kengaytirilgan ruxsat"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Bu ilova uchun qoʻshimcha ruxsatlar olib tashlandi"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Ruxsatlar"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitnes va salomatlik"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Kam qon kelishi"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Oʻrtacha qon kelishi"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Koʻp qon kelishi"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Hayz kuni: <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Ijobiy"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Salbiy"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Yuqori"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Ilova manbalarini tahrirlash"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Qurilma standarti"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Ilovaga tegishli maʼlumotlar"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Health Connect xizmatiga ruxsati bor ilovalar axboroti shu yerda chiqadi"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Kun"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Hafta"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Oy"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> haftasidagi tanlangan <xliff:g id="APP_NAME">%1$s</xliff:g> yozuvlari oʻchirib tashlansinmi?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>dagi tanlangan <xliff:g id="APP_NAME">%1$s</xliff:g> yozuvlari butunlay oʻchirib tashlansinmi?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Bu <xliff:g id="APP_NAME">%s</xliff:g> yozuvi butunlay oʻchirib tashlansinmi?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
