--- a/apk/res/values-vi/strings.xml
+++ b/apk/res/values-vi/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Quản lý dữ liệu về sức khoẻ và hoạt động thể dục trên thiết bị của bạn, đồng thời kiểm soát ứng dụng nào có thể truy cập vào dữ liệu đó"</string>
     <string name="data_title" msgid="4456619761533380816">"Dữ liệu và quyền truy cập"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Duyệt xem hồ sơ sức khoẻ"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"Tất cả các danh mục"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Xem tất cả các danh mục"</string>
     <string name="no_data" msgid="1906986019249068659">"Không có dữ liệu"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Nếu bạn cấp quyền đọc, ứng dụng này có thể đọc dữ liệu mới và dữ liệu trong 30 ngày qua"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Nếu bạn cấp quyền đọc, ứng dụng này có thể đọc dữ liệu mới và dữ liệu trước đây"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Bạn có thể tìm hiểu cách <xliff:g id="APP_NAME">%1$s</xliff:g> xử lý dữ liệu của bạn trong <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> của họ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"chính sách quyền riêng tư"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào hồ sơ sức khoẻ của bạn?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Nếu bạn cấp quyền truy cập, ứng dụng này có thể đọc và ghi dữ liệu như tình trạng dị ứng, kết quả xét nghiệm, vắc-xin và nhiều dữ liệu khác\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Giới thiệu về hồ sơ sức khoẻ"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dữ liệu cần chia sẻ"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Nếu bạn cho phép, <xliff:g id="APP_NAME">%1$s</xliff:g> có thể chia sẻ hồ sơ sức khoẻ của bạn với Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Đồng bộ hoá hồ sơ sức khoẻ từ nhiều nguồn và ứng dụng để lưu trữ hồ sơ ở cùng một nơi"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Xoá tất cả các quyền?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Xoá tất cả"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi bất kỳ dữ liệu nào từ Health Connect nữa.\n\nĐiều này không ảnh hưởng đến các quyền khác mà ứng dụng này có thể có, chẳng hạn như camera, micrô hoặc thông tin vị trí."</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"Quyền truy cập của ứng dụng"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Hiện bạn chưa cài đặt ứng dụng nào tương thích"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Quyền truy cập bổ sung"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Đã xoá các quyền bổ sung của ứng dụng này"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Quyền"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Sức khoẻ thể chất và tinh thần"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"Ra máu ít"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Ra máu vừa phải"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Ra máu nhiều"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"Ngày <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> trong kỳ kinh nguyệt"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"Có khả năng thụ thai"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Không có khả năng thụ thai"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Khả năng thụ thai cao"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Chỉnh sửa nguồn ứng dụng"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Theo chế độ cài đặt mặc định của thiết bị"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dữ liệu ứng dụng"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"Dữ liệu của các ứng dụng có quyền truy cập vào Health Connect sẽ xuất hiện ở đây"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"Ngày"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Tuần"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Tháng"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Xoá vĩnh viễn các mục đã chọn trên <xliff:g id="APP_NAME">%1$s</xliff:g> trong tuần từ ngày <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Xoá vĩnh viễn các mục đã chọn trên <xliff:g id="APP_NAME">%1$s</xliff:g> trong tháng <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Xoá vĩnh viễn mục này trên <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
