--- a/apk/res/values-zh-rHK/strings.xml
+++ b/apk/res/values-zh-rHK/strings.xml
@@ -23,6 +23,8 @@
     <string name="home_subtitle" msgid="2154213430054477787">"管理裝置上的健康和健身資料，並控制哪些應用程式可存取這些資料"</string>
     <string name="data_title" msgid="4456619761533380816">"資料和存取權"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"瀏覽健康記錄"</string>
+    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
+    <skip />
     <string name="all_categories_title" msgid="1446410643217937926">"所有類別"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"顯示所有類別"</string>
     <string name="no_data" msgid="1906986019249068659">"沒有資料"</string>
@@ -94,15 +96,15 @@
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"允許應用程式讀取卡路里消耗量資料"</string>
     <string name="background_read_medical_title" msgid="378446129450196253">"在背景存取所有資料"</string>
     <string name="background_read_medical_request_title" msgid="5388067032484069722">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」在背景存取所有資料嗎？"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"允許此應用程式在你沒有使用應用程式時存取健身和身心健康資料，以及健康記錄資料"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"如授予此權限，此應用程式可在你沒有使用應用程式時存取健身和身心健康資料，以及健康記錄資料。"</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"存取過往的健身和身心健康資料"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取過往的健身和身心健康資料嗎？"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前新增的資料"</string>
+    <string name="background_read_medical_description" msgid="4205144207056391848">"允許此應用程式在你不使用時存取健身與健康資料及健康記錄資料"</string>
+    <string name="background_read_medical_request_description" msgid="6135447220241108032">"如授予此權限，此應用程式可在你不使用時存取健身與健康資料及健康記錄資料。"</string>
+    <string name="historic_access_medical_title" msgid="1198466488695524014">"存取過往的健身與健康資料"</string>
+    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取過往的健身與健康資料嗎？"</string>
+    <string name="historic_access_medical_description" msgid="513689388911992345">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料"</string>
     <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"允許此應用程式存取所有過往資料"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"如授予此權限，此應用程式可存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前新增的資料。"</string>
+    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"如授予此權限，此應用程式可存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料。"</string>
     <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"如授予此權限，此應用程式可存取所有過往資料。"</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"由於「<xliff:g id="APP_NAME">%1$s</xliff:g>」沒有讀取權限，因此目前沒有任何健身資料被讀取"</string>
+    <string name="historic_access_medical_warning" msgid="6691110601538756473">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」沒有讀取權限，目前未有讀取任何健身資料"</string>
     <string name="background_read_title" msgid="5061383169517186234">"在背景存取資料"</string>
     <string name="background_read_request_title" msgid="8492898140120977977">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」在背景存取資料嗎？"</string>
     <string name="background_read_description" msgid="3203594555849969283">"允許此應用程式在你沒有使用應用程式時存取「健康資料同步」資料"</string>
@@ -331,21 +333,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"如果授予讀取權限，應用程式可讀取新資料和過去 30 天內的資料"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"如果授予讀取權限，應用程式可讀取新資料和過去的資料"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取 Health Connect 嗎？"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"如要瞭解「<xliff:g id="APP_NAME">%1$s</xliff:g>」如何處理你的資料，請參閱<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"私隱權政策"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健康記錄嗎？"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"如授予權限，應用程式便可讀取和寫入過敏、檢測結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"關於健康記錄"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"要分享的資料"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"如授予權限，「<xliff:g id="APP_NAME">%1$s</xliff:g>」便可與「健康資料同步」分享你的健康記錄。"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"同步其他應用程式和來源的健康記錄，將健康記錄集中一處"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"要移除所有權限嗎？"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"全部移除"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」將無法讀取或寫入任何「健康資料同步」資料。\n\n這不會影響此應用程式可能擁有的其他權限，例如相機、麥克風或位置的存取權。"</string>
@@ -408,6 +403,8 @@
     <string name="app_access_title" msgid="7137018424885371763">"應用程式存取權"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"你目前未安裝任何兼容的應用程式"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"其他存取權"</string>
+    <!-- no translation found for additional_access_summary (1076197455435130191) -->
+    <skip />
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"已移除此應用程式的其他權限"</string>
     <string name="permissions_header" msgid="6519976063360071569">"權限"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"健身和身心健康"</string>
@@ -608,7 +605,11 @@
     <string name="flow_light" msgid="1937543318146228793">"輕流量"</string>
     <string name="flow_medium" msgid="3783688724668943154">"中等流量"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"多流量"</string>
+    <!-- no translation found for flow_unknown (1634411759928572900) -->
+    <skip />
     <string name="period_day" msgid="3821944462093965882">"經期第 <xliff:g id="DAY">%1$d</xliff:g> 日，共 <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> 日"</string>
+    <!-- no translation found for period_length (2257138792780916599) -->
+    <skip />
     <string name="ovulation_positive" msgid="6588547263126320238">"正面"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"負面"</string>
     <string name="ovulation_high" msgid="205362931427158291">"多"</string>
@@ -1077,7 +1078,10 @@
     <string name="edit_data_sources" msgid="79641360876849547">"編輯應用程式來源清單"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"裝置預設設定"</string>
     <string name="app_data_title" msgid="6499967982291000837">"應用程式資料"</string>
-    <string name="no_data_footer" msgid="4777297654713673100">"有「健康資料同步」存取權的應用程式所提供的資料會在這裡顯示"</string>
+    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
+    <skip />
+    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
+    <skip />
     <string name="date_picker_day" msgid="3076687507968958991">"日"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"週"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"月"</string>
@@ -1092,7 +1096,7 @@
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"需要啟用至少一項讀取權限，才能開啟此應用程式的背景或過往資料存取權"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"需要啟用至少一項讀取權限，才能開啟此應用程式的背景存取權"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"需要啟用至少一項讀取權限，才能開啟此應用程式的過往資料存取權"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」已可存取健康記錄的過往資料。如要變更此設定，請關閉此應用程式的健康記錄權限"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」已可存取過往的健康記錄資料。如要變更此設定，請關閉此應用程式的健康記錄權限"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"管理健康記錄權限"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"開始使用「健康資料同步」"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"同步第一個應用程式，即可在這些應用程式間分享健康和健身資料"</string>
@@ -1123,4 +1127,6 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"要永久刪除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>該星期所選的「<xliff:g id="APP_NAME">%1$s</xliff:g>」項目嗎？"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久刪除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>所選的「<xliff:g id="APP_NAME">%1$s</xliff:g>」項目嗎？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"要永久刪除此「<xliff:g id="APP_NAME">%s</xliff:g>」項目嗎？"</string>
+    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
+    <skip />
 </resources>
